[tool.poetry]
name = "resolve-markers"
version = "0.1.0"
description = "DaVinci Resolve plugin that helps sychronise project markers across PCs\""
authors = ["Gerwood Stewart <gerwood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6, <3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
